Bug 136754 - FILEOPEN: CHART: incorrect background
Summary: FILEOPEN: CHART: incorrect background
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:26.2.0 target:25.8.0.2 target:...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2020-09-14 15:41 UTC by Xisco Faulí
Modified: 2025-07-21 18:27 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparison MSO 2010 and LibreOffice 7.1 master (346.44 KB, image/png)
2020-09-14 15:41 UTC, Xisco Faulí
Details
sample file (78.44 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2020-09-14 15:42 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-09-14 15:41:34 UTC
Created attachment 165498 [details]
Comparison MSO 2010 and LibreOffice 7.1 master

Steps to reproduce:
1. Open attached document

-> Both charts have no background. it should be black instead. See comparison image

Reproduced in

Version: 7.1.0.0.alpha0+
Build ID: 63317c6b5f3330dcbf977f37a9d01eafbc7451c2
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2020-09-14 15:42:00 UTC
Created attachment 165499 [details]
sample file
Comment 2 Xisco Faulí 2020-09-14 15:43:17 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=d851a02df57ab378ed0cc6d9362516de09c3279c

author	nd101 <Fong@nd.com.cn>	2020-06-23 22:15:40 +0800
committer	Xisco Fauli <xiscofauli@libreoffice.org>	2020-07-14 22:06:10 +0200
commit d851a02df57ab378ed0cc6d9362516de09c3279c (patch)
tree 0ae83c2ce4ed4447fd2c2ddef9b1e2c69c26a5fd
parent 7ef6dee499e6a705e022fc8159789599f9cbc1c0 (diff)
tdf#60316 Chart plotarea background issue

Bisected with: bibisect-linux64-7.1

Adding Cc: to nd101
Comment 3 nd101 2020-09-21 02:37:43 UTC
Thanks, we will look into it
Comment 4 NISZ LibreOffice Team 2021-06-09 08:47:11 UTC
Also attachment 102146 [details] is affected from bug 80816
Comment 5 QA Administrators 2023-06-10 03:14:20 UTC Comment hidden (obsolete)
Comment 6 Xisco Faulí 2023-06-12 09:46:44 UTC
Still reproducible in

Version: 7.7.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a6e72e2b314e64f3199f3eaf1ecf78157446f6dd
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: en-US (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 7 QA Administrators 2025-06-12 03:10:56 UTC Comment hidden (obsolete)
Comment 8 Xisco Faulí 2025-06-12 08:37:55 UTC
Still reproducible in

Version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 04744bbc9be4adca92eaba602b7a65c17f6b8dd7
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 9 Markus Mohrhard 2025-07-11 21:03:31 UTC
I think I found a proper fix for tdf#60316 and this issue that involves changes on how the theme fill style is handled for certain themes. This seems to be an undocumented quirk in the OOXML spec regarding pptx files.
Comment 10 Commit Notification 2025-07-13 08:10:14 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/87350de8737ca91ba71b356ca9f33fea99e74591

tdf#136754: handle pptx chart backgrounds provided by the themes correctly

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2025-07-14 11:11:17 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/be82073d8be8905d63ec79f8547c13d132f6274a

tdf#136754: handle pptx chart backgrounds provided by the themes correctly

It will be available in 25.8.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2025-07-14 17:57:29 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/3450337abd5292baa7d55cb24bd9e17f41425dc6

tdf#136754: handle pptx chart backgrounds provided by the themes correctly

It will be available in 25.2.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.