tdf#136754: handle pptx chart backgrounds provided by the themes correctly

It seems that there is a small undocumented quirk in the OOXML spec
regarding pptx files. The first 32 themes are handled as if they would
be specifying a transparent background whereas the spec seems to agree
with the xlsx/docx handling of using a solid background based on the
theme colors.

This corresponds to table 3 in 21.2.3.46 ST_Style of the OOXML spec.

This commit also reverts the fix for tdf#60316.

Change-Id: I4187b5740898435941647056a5820fa47a2b3dba
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187759
Tested-by: Jenkins
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
(cherry picked from commit 87350de8737ca91ba71b356ca9f33fea99e74591)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187844
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>