oox/source/drawingml/chart/plotareamodel.cxx
@@ -18,8 +18,6 @@
  */
 
 #include <drawingml/chart/plotareamodel.hxx>
-#include <drawingml/fillproperties.hxx>
-#include <oox/token/tokens.hxx>
 
 namespace oox::drawingml::chart {
 
@@ -40,7 +38,6 @@ WallFloorModel::~WallFloorModel()
 
 PlotAreaModel::PlotAreaModel()
 {
-    mxShapeProp.create().getFillProperties().moFillType = XML_noFill;
 }
 
 PlotAreaModel::~PlotAreaModel()
